--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
+    "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "config": "^3.3.1",
     "mysql": "^2.18.1",
